<resources>
    <string name="app_name">Consumer App</string>
    <string name="name">Name</string>
    <string name="username">username</string>

    <string name="search">Search</string>

    <string name="search_hint">Find user</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Followers</string>
    <string name="following">Following</string>
    <string name="_0">0</string>
    <string name="followers">Followers</string>
    <string name="company">company</string>
    <string name="location">location</string>
    <string name="id">Id</string>
    <string name="favorite">favorite</string>
    <string name="setting">setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifikasi">Aktifkan Notifikasi Setiap 9 AM</string>
    <string name="alarm">Reminder</string>
    <string name="reminder">Reminder Harian</string>


</resources>